# No-Inheritance

./: CMakeLists.txt  README.md  driving_licence.h  identity_document.h  international_driving_licence.h  main.cpp  passport.h  travel_pack.h
legacy_with_inheritance/: CMakeLists.txt  identity_document.h  main.cpp
